--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <h3>Декабрь 2019</h3>
                     </div>
                     <div class="titel">
-                        <h1><b>Акция для молодожонов</b></h1>
+                        <h1><b>Акция для молодоженов</b></h1>
                     </div>
                     <div class="content">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и всех
                         благ!</div>
